--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
     <!-- Font Awesome Cdn -->
+
 
 
     <!-- Google Fonts -->
@@ -31,7 +33,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container">
-          <a class="navbar-brand" href="index.html" id="logo"><span>T</span>ravel</a>
+          <a class="navbar-brand" href="index.html" id="logo"><span>Struc</span>Ex Program</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span><i class="fa-solid fa-bars"></i></span>
           </button>
@@ -39,9 +41,6 @@
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#book">Books</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#packages">Packages</a>
