--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
       </nav>
     <!-- Navbar End -->
 
+    <!-- Home Section Start -->
+    <div class="home">
+        <div class="content">
+            <h5>Welcome To StrucEx Program</h5>
+            <h1>Design for <span class="changecontent"></span></h1>
+            <p>StrucEx Program assists engineers in designing and analyzing structural components, optimizing performance, and ensuring safety and compliance.</p>          
+            <a href="#book">Check to Download</a>
+        </div>
+    </div>
+    <!-- Home Section End -->
+
 
 </body>
 </html>
