--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h5>Welcome To StrucEx Program</h5>
             <h1>Design for <span class="changecontent"></span></h1>
             <p>StrucEx Program assists engineers in designing and analyzing structural components, optimizing performance, and ensuring safety and compliance.</p>          
-            <a href="#book">Check to Download</a>
+            <a href="https://github.com/jaysonmelecio90/StructuralExcelProgramVersion/raw/refs/heads/main/Structural%20Excel%20Program%20Version%202.0.0.5.exe">Check to Download</a>
         </div>
     </div>
     <!-- Home Section End -->
