--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>StrucEx Concrete Beam</h3>
                 <p>Calculates forces and reinforcement for beams, ensuring code compliance and efficiency.</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -107,7 +107,7 @@
                 <h3>StrucEx Rect Column</h3>
                 <p>The program designs Rectangular columns by calculating capacities based on user inputs.</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
                 <h3>StrucEx Circular Column</h3>
                 <p>The program designs Circular columns by calculating capacities based on user inputs.</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -140,7 +140,7 @@
                 <h3>StrucEx Isolated Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -153,7 +153,7 @@
                 <h3>StrucEx Combined Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -166,7 +166,7 @@
                 <h3>StrucEx Strap Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -186,7 +186,7 @@
                 <h3>StrucEx Wall Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
 
@@ -199,7 +199,8 @@
                 <h3>StrucEx Retaining Wall</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
+
               </div>
             </div>
 
@@ -212,7 +213,8 @@
                 <h3>StrucEx Steel Element</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
-                <a href="#book">Video Tutorial</a>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
+
               </div>
             </div>
 
