--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="card">
               <img src="./images/RecCol.PNG" alt="">
               <div class="card-body">
-                <h3>StrucEx Rect Column</h3>
+                <h3>StrucEx Rectangular Column</h3>
                 <p>The program designs Rectangular columns by calculating capacities based on user inputs.</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
                 <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
@@ -214,11 +214,29 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
                 <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
-
               </div>
             </div>
 
           </div>
+        </div>
+
+        <div class="row" style="margin-top: 30px;">
+
+          <div class="col-md-4 py-3 py-md-0">
+
+            <div class="card">
+              <img src="./images/italy.png" alt="">
+              <div class="card-body">
+                <h3>StrucEx Concrete Slab</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
+                <h6>Price: <strong>₱500.00/year</strong></h6>
+                <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
+              </div>
+            </div>
+
+          </div>
+
+   
         </div>
 
 
