--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
                 <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
             </div>
-
           </div>
-
         </div>
 
 
@@ -135,7 +133,7 @@
           <div class="col-md-4 py-3 py-md-0">
 
             <div class="card">
-              <img src="./images/italy.png" alt="">
+              <img src="./images/Isolated Footing.PNG" alt="">
               <div class="card-body">
                 <h3>StrucEx Isolated Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
@@ -148,7 +146,7 @@
           <div class="col-md-4 py-3 py-md-0">
 
             <div class="card">
-              <img src="./images/india.png" alt="">
+              <img src="./images/Combined.PNG" alt="">
               <div class="card-body">
                 <h3>StrucEx Combined Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
@@ -161,7 +159,7 @@
           <div class="col-md-4 py-3 py-md-0">
 
             <div class="card">
-              <img src="./images/us.png" alt="">
+              <img src="./images/StrapFooting.png" alt="">
               <div class="card-body">
                 <h3>StrucEx Strap Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
@@ -181,7 +179,7 @@
           <div class="col-md-4 py-3 py-md-0">
 
             <div class="card">
-              <img src="./images/italy.png" alt="">
+              <img src="./images/WallFooting.png" alt="">
               <div class="card-body">
                 <h3>StrucEx Wall Footing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
@@ -194,7 +192,7 @@
           <div class="col-md-4 py-3 py-md-0">
 
             <div class="card">
-              <img src="./images/india.png" alt="">
+              <img src="./images/Retaining.png" alt="">
               <div class="card-body">
                 <h3>StrucEx Retaining Wall</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
