--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <img src="./images/Isolated Footing.PNG" alt="">
               <div class="card-body">
                 <h3>StrucEx Isolated Footing</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
+                <p>Lorem, on going. Ut, doloribus!</p>
                 <h6>Price: <strong>₱500.00/year</strong></h6>
                 <a href="https://www.flaticon.com/free-icon/work-in-progress_5110294?term=under+construction&page=1&position=5&origin=search&related_id=5110294">Video Tutorial</a>
               </div>
