--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>    
       <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-lg" id="navbar">
+      <nav class="navbar navbar-expand-lg  fixed-top" id="navbar">
         <div class="container">
           <a class="navbar-brand" href="index.html" id="logo"><span>Struc</span>Ex Program</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
