--- a/html/Tutorial_Beam.html
+++ b/html/Tutorial_Beam.html
@@ -29,17 +29,24 @@
       <nav class="navbar fixed-top navbar-expand-lg" id="navbar" style="background-color: #636e72;">
         <div class="container">
           <a class="navbar-brand" href="../index.html" id="logo"><span>Struc</span>Ex Beam  </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span><i class="fa-solid fa-bars"></i></span>
+
+          <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span><i class="fa-solid fa-bars "></i></span>
           </button>
-          <div class="collapse navbar-collapse left" id="mynavbar">
+
+          
+          <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
+
             <ul class="navbar-nav me-auto">
+
               <li class="nav-item">
                 <a class="nav-link active" href="BeamTutorial.html">Home</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#video">Videos</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#report">Reports</a>
               </li>
