--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card-body">
                   <h3>StrucEx Concrete Beam</h3>
                   <p>Calculates forces and reinforcement for beams, ensuring code compliance and efficiency.</p>
-                  <a href="/html/BeamTutorial.html">Video Tutorial</a>
+                  <a href="/html/Tutorial_Beam.html">Video Tutorial</a>
                 </div>
             </div>
           </div>
@@ -109,7 +109,7 @@
                 <div class="card-body">
                     <h3>StrucEx Rectangular Column</h3>
                     <p>The program designs Rectangular columns by calculating capacities based on user inputs.</p>
-                    <a href="/html/RecColumnTutorial.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_RecColumn.html">Video Tutorial</a>
                 </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
                 <div class="card-body">
                     <h3>StrucEx Circular Column</h3>
                     <p>The program designs Circular columns by calculating capacities based on user inputs.</p>
-                    <a href="/html/CirColumnTutorial.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_CirColumn.html">Video Tutorial</a>
                 </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
                   <div class="card-body">
                     <h3>StrucEx Isolated Footing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
-                    <a href="html/IsolatedFooting.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_IsolatedFooting.html">Video Tutorial</a>
                   </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
                   <div class="card-body">
                     <h3>StrucEx Combined Footing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
-                    <a href="/html/CombineFootingTutorial.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_CombineFooting.html">Video Tutorial</a>
                   </div>
               </div>
             </div>
@@ -156,7 +156,7 @@
                   <div class="card-body">
                     <h3>StrucEx Strap Footing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
-                    <a href="/html/StrapFooting.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_StrapFooting.html">Video Tutorial</a>
                   </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                   <div class="card-body">
                     <h3>StrucEx Wall Footing</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut, doloribus!</p>
-                    <a href="/html/WallFooting.html">Video Tutorial</a>
+                    <a href="/html/Tutorial_WallFooting.html">Video Tutorial</a>
                   </div>
               </div>
             </div>
