--- a/html/Tutorial_StrapFooting.html
+++ b/html/Tutorial_StrapFooting.html
@@ -279,11 +279,9 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus fugiat, ipsa quos nulla qui alias.</p>
 
             <div class="social-links">
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-youtube"></i>
-              <i class="fa-brands fa-pinterest-p"></i>
+              <a href="https://www.facebook.com/StrucExProgram" target="_blank"> <i class="fa-brands fa-facebook"></i> </a>
+              <a href="https://www.instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i> </a>
+              <a href="https://www.youtube.com/@CioRandomStuff" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
   
             <div class="copyright">
