--- a/index.html
+++ b/index.html
@@ -335,12 +335,11 @@
       <footer id="footer">
           <h1><span>Struc</span>Ex Program</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus fugiat, ipsa quos nulla qui alias.</p>
+   
           <div class="social-links">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-pinterest-p"></i>
+            <a href="https://www.facebook.com/StrucExProgram" target="_blank"> <i class="fa-brands fa-facebook"></i> </a>
+            <a href="https://www.instagram.com" target="_blank"> <i class="fa-brands fa-instagram"></i> </a>
+            <a href="https://www.youtube.com/@CioRandomStuff" target="_blank"><i class="fa-brands fa-youtube"></i></a>
           </div>
 
           <div class="copyright">
