--- a/html/Tutorial_Beam.html
+++ b/html/Tutorial_Beam.html
@@ -98,6 +98,8 @@
                         <ul class="dropdown-menu" aria-labelledby="videoDropdown1">
                             <li><a class="dropdown-item" href="#" onclick="playVideo('q1TowzIEYg0?si=-qVWhTWhPhDEcma0')">Introduction 1</a></li>
                             <li><a class="dropdown-item" href="#" onclick="playVideo('sHjYoyJ2QAE?si=C1OkjG6E4aShlGZI')">Introduction 2</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('GeLRCinBMkY?si=Bof3EBkcI6llSuap')">General Panel - (Project Detail Form,   Input Form,   Save Form)</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('GeLRCinBMkY?si=Bof3EBkcI6llSuap')">Menu Panel - (Save Data,   Edit Data,   Remove Data)</a></li>
                         </ul>
             
                         <button class="btn btn-primary dropdown-toggle equal-width-btn mt-2" type="button" id="videoDropdown2" data-bs-toggle="dropdown" aria-expanded="false">
