--- a/html/Tutorial_Beam.html
+++ b/html/Tutorial_Beam.html
@@ -96,10 +96,12 @@
                             Introduction
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="videoDropdown1">
-                            <li><a class="dropdown-item" href="#" onclick="playVideo('q1TowzIEYg0?si=-qVWhTWhPhDEcma0')">Introduction 1</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="playVideo('sHjYoyJ2QAE?si=C1OkjG6E4aShlGZI')">Introduction 2</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('z-tNxyVXHH4?si=-QjFfgzZKSwqb1t8')">Start Open File - (New File, Open File, Recent File)</a></li>
                             <li><a class="dropdown-item" href="#" onclick="playVideo('GeLRCinBMkY?si=Bof3EBkcI6llSuap')">General Panel - (Project Detail Form,   Input Form,   Save Form)</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="playVideo('GeLRCinBMkY?si=Bof3EBkcI6llSuap')">Menu Panel - (Save Data,   Edit Data,   Remove Data)</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('GeQmr_K-neS88?si=wviXC57Qn2EA0MZs')">Menu Panel - (Save Data,   Edit Data,   Remove Data)</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('xRfsIG8WWhg?si=rQ1JGpaFVQ3uwe3n')">Calculate Panel - (Calculate Beam,   Auto Design)</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('LFzYoakC1uw?si=_mFf8xwHKAitMImz')">Report Panel - (Summary, Detailed Calculation Report)</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('Ir9Ua6AMS7A?si=nCO6tC53xen-vG87')">Export Dxf Panel - (Dxf Drawing Schedule)</a></li>
                         </ul>
             
                         <button class="btn btn-primary dropdown-toggle equal-width-btn mt-2" type="button" id="videoDropdown2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -108,11 +110,26 @@
                         <ul class="dropdown-menu" aria-labelledby="videoDropdown2">
                             <li><a class="dropdown-item" href="#" onclick="playVideo('vTRMyREC0Po?si=dKzxJRxYTk8jrBSU')">Column Member Extract Data</a></li>
                             <li><a class="dropdown-item" href="#" onclick="playVideo('OIFhIBN6Drc?si=g-niRPvXK-ZHm853')">Beam Member Extract Data</a></li>
-                            <li><a class="dropdown-item" href="#" onclick="playVideo('qGXoQyJWPQQ?si=dxxAZqQu5DsKcF-H')">Data Import to StrucEx Beam</a></li>
-
-
-                            
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('qGXoQyJWPQQ?si=dxxAZqQu5DsKcF-H')">Data Import to StrucEx Beam</a></li>     
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('Hq4-Q_7N_Bw?si=X8toit53Q5nmowFN')">Merge and Explode Beam, Preparation to Stress Extract</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="playVideo('jh5RLnD8-AY?si=SqCe8NpxLZFGhG5v')">Set Load Combination to Stress Extract</a></li>                        
                         </ul>
+
+
+                        <button class="btn btn-primary dropdown-toggle equal-width-btn mt-2" type="button" id="videoDropdown2" data-bs-toggle="dropdown" aria-expanded="false">
+                          STAAD Import
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="videoDropdown2">
+                          <li><a class="dropdown-item" href="#" onclick="playVideo('bRkOYNCkmJQ?si=tr3e89PCgwyeSfJD')">Data Import to StrucEx Beam</a></li>                          
+                      </ul>
+
+                      <button class="btn btn-primary dropdown-toggle equal-width-btn mt-2" type="button" id="videoDropdown2" data-bs-toggle="dropdown" aria-expanded="false">
+                        ETABs Import
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="videoDropdown2">
+                        <li><a class="dropdown-item" href="#" onclick="playVideo('iiQ5U2ZqmXs?si=uQo-dn1IGpGldnCW')">Data Import to StrucEx Beam</a></li>                          
+                    </ul>
+
                     </div>   
                 </div>
             </div>
